# Polymorphic

./: .clang-format  .dir-locals.el  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  configure
cmake/: PolymorphicConfig.cmake.in
include/Polymorphic/: Deque.h  ForwardList.h  List.h  Map.h  Multimap.h  Multiset.h  Set.h  UnorderedMap.h  UnorderedMultimap.h  UnorderedMultiset.h  UnorderedSet.h  Vector.h
test/: CMakeLists.txt  StdListTestSuite.h  StdMapTestSuite.h  StdUnorderedMapTestSuite.h  StdVectorTestSuite.h  TestCase.h  TestSuite.h  dequeTest.cpp  forwardListTest.cpp  listTest.cpp  mapTest.cpp  multiMapTest.cpp  multimapTest.cpp  multisetTest.cpp  setTest.cpp  unorderedMapTest.cpp  unorderedMultimapTest.cpp  unorderedMultisetTest.cpp  unorderedSetTest.cpp  vectorTest  vectorTest.cpp
test/Testee/: DequeTestSuite.h  ForwardListTestSuite.h  ListTestSuite.h  MapTestSuite.h  SetTestSuite.h  TestCase.h  TestSuite.h  UnorderedMapTestSuite.h  UnorderedSetTestSuite.h  VectorTestSuite.h
